# myTutor

slm_finetune_framework/: README.md  main.py  pyproject.toml
slm_finetune_framework/config/: example_config.yaml
slm_finetune_framework/connectors/: databases.py  documents.py  servers.py
slm_finetune_framework/core/: interfaces.py  registry.py
slm_finetune_framework/pipeline/: orchestrator.py
slm_finetune_framework/processing/: chunker.py  cleaner.py  task_builders.py
slm_finetune_framework/training/: model_manager.py  trainer.py
